--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
     font-weight: 700;
     
 }
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
 
 label {
   font-size: xx-large; 
